--- a/documentation/docs/guides/recipes/index.mdx
+++ b/documentation/docs/guides/recipes/index.mdx
@@ -44,9 +44,9 @@ import VideoCarousel from '@site/src/components/VideoCarousel';
       link="/docs/tutorials/recipes-tutorial"
     />
     <Card 
-      title="Sub-Recipes"
-      description="Learn how a recipe can use sub-recipes to do specific tasks."
-      link="/docs/guides/recipes/sub-recipes"
+      title="Subrecipes"
+      description="Learn how a recipe can use subrecipes to do specific tasks."
+      link="/docs/guides/recipes/subrecipes"
     />
     <Card 
       title="Saving Recipes"
@@ -54,9 +54,9 @@ import VideoCarousel from '@site/src/components/VideoCarousel';
       link="/docs/guides/recipes/storing-recipes"
     />
     <Card 
-      title="Sub-Recipes In Parallel Tutorial"
-      description="Learn how to run multiple sub-recipes instances concurrently."
-      link="/docs/tutorials/sub-recipes-in-parallel"
+      title="Subrecipes In Parallel Tutorial"
+      description="Learn how to run multiple subrecipes instances concurrently."
+      link="/docs/tutorials/subrecipes-in-parallel"
     />
   </div>
 </div>
@@ -102,8 +102,8 @@ import VideoCarousel from '@site/src/components/VideoCarousel';
     { 
       type: 'iframe', 
       src: 'https://youtube.com/embed/1szmJSKInnU',
-      title: 'Advanced Tips for Recipes/Sub-Recipes in Goose',
-      description: 'Advanced tips for using recipes and sub-recipes in goose',
+      title: 'Advanced Tips for Recipes/Subrecipes in Goose',
+      description: 'Advanced tips for using recipes and subrecipes in goose',
       duration: '10:07'
     },
     { 
