--- a/documentation/docs/guides/subagents.mdx
+++ b/documentation/docs/guides/subagents.mdx
@@ -4,7 +4,7 @@ sidebar_position: 50
 sidebar_label: Subagents
 ---
 
-Subagents are independent instances that execute tasks while keeping your main conversation clean and focused. They bring process isolation and context preservation by offloading work to separate instances. Think of them as temporary ts that handle specific jobs without cluttering your chat with tool execution details.
+Subagents are independent instances that execute tasks while keeping your main conversation clean and focused. They bring process isolation and context preservation by offloading work to separate instances. Think of them as temporary assistants that handle specific jobs without cluttering your chat with tool execution details.
 
 <details>
   <summary>Subagents Walkthrough</summary>
