Update codex subagent configuration in documentation
- Change args from 'mcp' to 'mcp-server' for accuracy
- Update description from 'Sub-agent' to 'Subagent' for consistency

--- a/documentation/docs/guides/subagents.mdx
+++ b/documentation/docs/guides/subagents.mdx
@@ -154,10 +154,10 @@ External subagents let you bring in AI agents from other providers and platforms
 ```yaml
 subagent:
   args:
-  - mcp
+  - mcp-server
   bundled: true
   cmd: codex
-  description: OpenAI Codex CLI Sub-agent
+  description: OpenAI Codex CLI Subagent
   enabled: true
   env_keys:
   - OPENAI_API_KEY
