a few more, including the template

--- a/documentation/docs/mcp/_template_.mdx
+++ b/documentation/docs/mcp/_template_.mdx
@@ -18,10 +18,10 @@ This tutorial covers how to add the [{Extension Name} MCP Server](/) as a Goose 
 
 :::tip TLDR
 <Tabs groupId="interface">
-  <TabItem value="ui" label="Goose Desktop" default>
+  <TabItem value="ui" label="goose Desktop" default>
   [Launch the installer]({goose_url})
   </TabItem>
-  <TabItem value="cli" label="Goose CLI">
+  <TabItem value="cli" label="goose CLI">
   **Command**
   ```sh
   {command}
@@ -37,7 +37,7 @@ This tutorial covers how to add the [{Extension Name} MCP Server](/) as a Goose 
 ## Configuration
 
 <Tabs groupId="interface">
-  <TabItem value="ui" label="Goose Desktop" default>
+  <TabItem value="ui" label="goose Desktop" default>
       <!-- For external MCP servers (npx, uvx, git, etc.) -->
       <GooseDesktopInstaller
         extensionId="{extension_id}"
@@ -80,7 +80,7 @@ This tutorial covers how to add the [{Extension Name} MCP Server](/) as a Goose 
         note="Note that you'll need Node.js installed on your system to run this command, as it uses npx."
       />
     </TabItem>
-  <TabItem value="cli" label="Goose CLI">
+  <TabItem value="cli" label="goose CLI">
       <CLIExtensionInstructions
       name="{Extension Name}"
       command="{command}"
@@ -92,12 +92,12 @@ This tutorial covers how to add the [{Extension Name} MCP Server](/) as a Goose 
 
 {describe any environment setup, access controls, and what you want to accomplish.}
 
-### Goose Prompt
+### goose Prompt
 
 > _exact prompt_
 
 
-### Goose Output
+### goose Output
 
 :::note Desktop
 
