Add return mode to settings table

--- a/documentation/docs/guides/subagents.mdx
+++ b/documentation/docs/guides/subagents.mdx
@@ -246,6 +246,7 @@ Subagents use the following pre-configured settings, but you can override any de
 | **Max Turns** | 25 | Use natural language or set `GOOSE_SUBAGENT_MAX_TURNS` |
 | **Timeout** | 5 minutes | Request longer timeout in your prompt |
 | **Extensions** | Inherited from parent | Specify which extensions to use in your prompt |
+| **Return Mode** | All subagent information provided in main session | Specify how much detail you want in your prompt |
 
 ### Customizing Settings in Prompts
 
