--- a/documentation/docs/mcp/_template_.mdx
+++ b/documentation/docs/mcp/_template_.mdx
@@ -56,7 +56,7 @@ This tutorial covers how to add the [{Extension Name} MCP Server](/) as a goose 
       args={["-y", "@package/name"]}
       timeout={300}
       envVars={[
-        { name: "API_KEY", label: "••••••••••••••••" }
+        { name: "API_KEY", label: "Description or placeholder value" }
       ]}
       apiKeyLink="https://example.com/api-keys"
       apiKeyLinkText="Service Access Token"
@@ -87,7 +87,7 @@ This tutorial covers how to add the [{Extension Name} MCP Server](/) as a goose 
       command="{full command with args}"
       timeout={300}
       envVars={[
-        { key: "API_KEY", value: "••••••••••••••••" }
+        { key: "API_KEY", value: "▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪" }
       ]}
       infoNote={
         <>
@@ -107,7 +107,7 @@ This tutorial covers how to add the [{Extension Name} MCP Server](/) as a goose 
       url="https://example-server.com/endpoint"
       timeout={300}
       envVars={[                                    // also used for http request headers
-        { key: "API_KEY", value: "••••••••••••••••" }
+        { key: "API_KEY", value: "▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪▪" }
       ]}
       infoNote={
         <>
