lowercase goose; update built-in cli; alby remote desktop

--- a/documentation/docs/mcp/context7-mcp.mdx
+++ b/documentation/docs/mcp/context7-mcp.mdx
@@ -1,6 +1,6 @@
 ---
 title: Context7 Extension
-description: Add Context7 MCP Server as a Goose Extension
+description: Add Context7 MCP Server as a goose Extension
 ---
 
 import Tabs from '@theme/Tabs';
@@ -13,7 +13,7 @@ import GooseDesktopInstaller from '@site/src/components/GooseDesktopInstaller';
 <YouTubeShortEmbed videoUrl="https://www.youtube.com/embed/LNmPi6YCocI" /> 
 
 
-This tutorial covers how to add the [Context7 MCP Server](https://github.com/upstash/context7) as a Goose extension to pull up-to-date, version-specific code and docs so Goose can vibe code with real context, not hallucinated or outdated answers.
+This tutorial covers how to add the [Context7 MCP Server](https://github.com/upstash/context7) as a goose extension to pull up-to-date, version-specific code and docs so goose can vibe code with real context, not hallucinated or outdated answers.
 
 :::tip TLDR
 <Tabs groupId="interface">
@@ -58,7 +58,7 @@ Note that you'll need [Node.js](https://nodejs.org/) installed on your system to
 
 ## Example Usage
 
-In this example, Goose uses Context7 to pull real-time docs, compare tools, and scaffold a modern app using only the latest, official implementation patterns.
+In this example, goose uses Context7 to pull real-time docs, compare tools, and scaffold a modern app using only the latest, official implementation patterns.
 
 <Tabs groupId="interface">
   <TabItem value="ui" label="goose Desktop" default>
@@ -66,7 +66,7 @@ In this example, Goose uses Context7 to pull real-time docs, compare tools, and 
   </TabItem>
   <TabItem value="cli" label="goose CLI">
 
-  1. Open a terminal and start a new Goose session:
+  1. Open a terminal and start a new goose session:
 
   ```sh
   goose session
@@ -75,7 +75,7 @@ In this example, Goose uses Context7 to pull real-time docs, compare tools, and 
   </TabItem>
 </Tabs>
 
-### Goose Prompt
+### goose Prompt
 
 I need help building a modern web application. Could you:
 
@@ -103,7 +103,7 @@ I need help building a modern web application. Could you:
 
 Please reference specific documentation sections and explain why certain approaches are recommended over others.
 
-### Goose Output
+### goose Output
 
 :::note Desktop
 
