Make repository a clickable link in ArchivedExtensionWarning component
- Add repoUrl prop to ArchivedExtensionWarning component
- Update both blog posts to pass the GitHub repo URL
- Repository text now links to https://github.com/block/vscode-mcp

--- a/documentation/blog/2025-03-21-goose-vscode/index.mdx
+++ b/documentation/blog/2025-03-21-goose-vscode/index.mdx
@@ -9,7 +9,7 @@ import ArchivedExtensionWarning from '@site/src/components/ArchivedExtensionWarn
 
 ![blog cover](vscodestream.png)
 
-<ArchivedExtensionWarning extensionName="VS Code MCP" />
+<ArchivedExtensionWarning extensionName="VS Code MCP" repoUrl="https://github.com/block/vscode-mcp" />
 
 Want to use Goose in VS Code? On the recent [Wild Goose Case livestream](https://www.youtube.com/watch?v=hG7AnTw-GLU&ab_channel=BlockOpenSource), hosts [Ebony Louis](https://www.linkedin.com/in/ebonylouis/) and [Adewale Abati](https://www.linkedin.com/in/acekyd/) were joined by [Andrew Gertig](https://www.linkedin.com/in/andrewgertig/), Engineering Lead at Cash App, as he demonstrated the new VSCode MCP and how it brings powerful Goose-assisted coding capabilities directly into VS Code.
 
