--- a/documentation/blog/2025-04-01-top-5-mcp-servers/index.mdx
+++ b/documentation/blog/2025-04-01-top-5-mcp-servers/index.mdx
@@ -65,7 +65,7 @@ This works differently from the Knowledge Graph extension even though they both 
 
 ## VS Code Extension: Your Favorite Editor, Connected
 
-<ArchivedExtensionWarning extensionName="VS Code Extension" />
+<ArchivedExtensionWarning extensionName="VS Code Extension" repoUrl="https://github.com/block/vscode-mcp" />
 
 One of the biggest points in conversations with people especially around vibe coding, is finding ways to track what changes are being made. While version control is always recommended, sometimes I want to be able to stop or change direction before going too far. The [VS Code Extension](https://github.com/block/vscode-mcp) alongside other features, allows me to preview the diff of my code changes before I commit them. 
 
