mcp sampling support

--- a/documentation/docs/guides/interactive-chat/index.mdx
+++ b/documentation/docs/guides/interactive-chat/index.mdx
@@ -10,7 +10,7 @@ import VideoCarousel from '@site/src/components/VideoCarousel';
 
 <h1 className={styles.pageTitle}>Rich Interactive Chat with MCP-UI</h1>
 <p className={styles.pageDescription}>
-  Goose Desktop supports extensions that transform text-only responses into graphical, interactive experiences. Instead of reading through lists and descriptions, you can click, explore, and interact with UI components directly in your conversations.
+  goose Desktop supports extensions that transform text-only responses into graphical, interactive experiences. Instead of reading through lists and descriptions, you can click, explore, and interact with UI components directly in your conversations.
 </p>
 
  <div className="video-container margin-bottom--lg">
@@ -29,12 +29,12 @@ import VideoCarousel from '@site/src/components/VideoCarousel';
   <div className={styles.cardGrid}>
     <Card 
       title="MCP-UI Extensions"
-      description="Goose transforms text-based responses into engaging graphical and interactive user experiences."
+      description="goose transforms text-based responses into engaging graphical and interactive user experiences."
       link="/docs/guides/interactive-chat/mcp-ui"
     />
     <Card 
       title="Auto Visualiser Extension"
-      description="Generate interactive data visualizations automatically in Goose."
+      description="Generate interactive data visualizations automatically in goose."
       link="/docs/mcp/autovisualiser-mcp"
     />
   </div>
@@ -45,7 +45,7 @@ import VideoCarousel from '@site/src/components/VideoCarousel';
   <div className={styles.cardGrid}>
     <Card      
       title="MCP UI: Bringing the Browser into the Agent"
-      description="MCP-UI servers return content that Goose Desktop renders as rich, embeddable UI."
+      description="MCP-UI servers return content that goose Desktop renders as rich, embeddable UI."
       link="/blog/2025/08/11/mcp-ui-post-browser-world"
     />
     <Card      
@@ -63,6 +63,11 @@ import VideoCarousel from '@site/src/components/VideoCarousel';
       description="Making an MCP server MCP-UI compatible requires just a few lines of code"
       link="/blog/2025/09/08/turn-any-mcp-server-mcp-ui-compatible"
     />
+    <Card      
+      title="Designing AI for Users, Not Just LLMs"
+      description="Building intent-based AI experiences with MCP-UI."
+      link="/blog/2025/10/14/designing-ai-for-humans"
+    />
   </div>
 </div>
 
@@ -72,6 +77,13 @@ import VideoCarousel from '@site/src/components/VideoCarousel';
 <VideoCarousel
   id="more-videos"
   videos={[
+    { 
+      type: 'iframe', 
+      src: 'https://youtube.com/embed/Kxj-vFBO_9U',
+      title: 'Building A MCP-UI Server',
+      description: 'Learn how to build your own MCP-UI server from scratch',
+      duration: ''
+    },
     { 
       type: 'iframe', 
       src: 'https://youtube.com/embed/GS-kmreZDgU',
