lowercase goose in getting-started and guides

--- a/documentation/docs/guides/interactive-chat/index.mdx
+++ b/documentation/docs/guides/interactive-chat/index.mdx
@@ -82,7 +82,7 @@ import VideoCarousel from '@site/src/components/VideoCarousel';
       src: 'https://youtube.com/embed/Kxj-vFBO_9U',
       title: 'Building A MCP-UI Server',
       description: 'Learn how to build your own MCP-UI server from scratch',
-      duration: ''
+      duration: '40:07'
     },
     { 
       type: 'iframe', 
